# advent_of_code

./: .gitignore  README.md
2023/day_1/: solution.hs
2023/day_2/: solution.hs
2024/day_01/: Solution.hs  day-01.cabal
2024/day_1/: solution.hs
2024/day_10/: DISCLAIMER.txt  solution.hs
2024/day_11/: solution.hs
2024/day_13/: Manual.hs  Solution.hs  day13.cabal
2024/day_14/: solution.hs
2024/day_17/: solution.hs  solution_proper.hs
2024/day_18/: solution.hs
2024/day_19/: solution.hs
2024/day_2/: solution.hs
2024/day_24/: Solution.hs  day24.cabal  results.txt
2024/day_25/: solution.hs
2024/day_3/: solution.hs
2024/day_4/: Solution.hs  advent-day4.cabal
2024/day_5/: Main.hs  Solution.hs  advent-day5.cabal  solution.hs  test.hs
2024/day_7/: solution.hs
2024/day_8/: Solution.hs  day-8.cabal
2024/day_9/: solution.hs
