cabal-version: 3.0
name: day8
version: 0.1.0.0
synopsis: Advent of Code 2024 Day 8
description: Solution for Advent of Code 2024 Day 8
author: Nathan
maintainer: nathan@example.com
license: MIT
build-type: Simple

executable day-8
    main-is: Solution.hs
    build-depends: base >=4.16.0.0, linear, parsec
    hs-source-dirs: .
    default-language: Haskell2010
